--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "quickstart-repository",
   "dependencies": {
-    "@dataform/core": "2.0.1"
+    "@dataform/core": "2.0.1",
+    "dataform-scd": "https://github.com/dataform-co/dataform-scd/archive/0.3.tar.gz"
   }
 }
